--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql.railway.internal
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=railway
+DB_DATABASE=absensi_paud
 DB_USERNAME=root
-DB_PASSWORD=qwffKsYfYFXEQJXOhCMfdAHiLammNlUw
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
